samples/_failures_safe/1761169715_8c0419_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_67e2992c.c: In function ‘main’:
./samples/SAFE/__tmp_67e2992c.c:157:5: error: expected declaration or statement at end of input
  157 |     }
      |     ^
